# amazon-lead-agent

./: .env.example  .gitignore  HERMES_SETUP.md  IMPLEMENTATION_PLAN.md  LOCAL_SETUP.md  README.md  SETUP.md  config.example.yaml  pyproject.toml  requirements.txt  run_campaign.py
.github/workflows/: daily_campaign.yml
amazon_lead_agent/: __init__.py  cli.py  config.py  lead_filters.py  normalization.py  prompts.py  reporting.py  runtime.py
amazon_lead_agent/agents/: __init__.py  discovery_agent.py  extraction_agent.py  outreach_agent.py  scoring_agent.py
amazon_lead_agent/llm/: __init__.py  base.py  gemini_client.py  minimax_client.py  router.py
prompts/: extract_brand.md  score_lead.md  write_outreach.md
scripts/: benchmark_minimax_models.py  cleanup_bad_leads.py  create_google_sheet.py  install_local.ps1  install_local.sh  migrate_lead_queue.py  run_local.ps1  run_local.sh  test_llm_provider.py
tests/: test_amazon_backlink_discovery.py  test_amazon_evidence_verification.py  test_amazon_verification_debug.py  test_cleanup_bad_leads.py  test_config_overrides.py  test_discovery_filters.py  test_discovery_strategy.py  test_extraction_method.py  test_google_sheets_auth.py  test_google_sheets_serialization.py  test_lead_filters.py  test_lead_queue_migration.py  test_llm_router.py  test_minimax_client.py  test_normalization.py  test_prompts.py  test_runtime_dry_run.py  test_scoring_agent.py  test_scoring_classification.py  test_search_router.py  test_search_urls.py  test_sqlite_store.py  test_storage_router.py  test_tracer_mode.py  test_web_extraction.py
(+16 files in other folders)
